[textfields] fix vertical alignment

--- a/packages/scss/src/components/inputs/field/_field.scss
+++ b/packages/scss/src/components/inputs/field/_field.scss
@@ -58,6 +58,7 @@
 			display: inline-flex;
 			margin-left: _component("field.input.inline-margin");
 			margin-right: _component("field.input.inline-margin");
+			margin-bottom: 1.4rem;
 		}
 
 		&.mod-block {
